--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,5 +1,12 @@
-name = "hanzi-bishun-pro"
+name = "hanzilianxiqi"
 compatibility_date = "2023-10-30"
 
+[build]
+command = "npm run build"
+output_dir = "build"
+
 [site]
-bucket = "./public" 
+bucket = "build"
+
+[env.production]
+node_compat = true 
