--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,12 +1,12 @@
 name = "hanzilianxiqi"
+main = "./build/index.js"
 compatibility_date = "2023-10-30"
 
 [build]
 command = "npm run build"
-output_dir = "build"
 
 [site]
-bucket = "build"
+bucket = "./build"
 
 [env.production]
 node_compat = true 
